<resources>
    <string name="app_name">Group Journal</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_group_mate">Create new Group mate</string>
    <string name="birthday_txt">Birthday</string>
    <string name="create">Create</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="last_name">Last Name</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_tab_bar">MainActivity</string>
    <string name="title_group">Group</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="student_image">student image</string>
    <string name="student_list">Student list</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="load_video">Load video</string>
    <string name="watch_video">Watch video</string>
    <string name="save">Save</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="font_size">Font size</string>
    <string name="dark_mode">Dark mode</string>
    <string name="color">Color</string>
    <string name="primary_color">Primary color</string>
    <string name="logout">Logout</string>
</resources>