<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_group">

    <fragment
        android:id="@+id/navigation_group"
        android:name="com.androsov.groupjournal.ui.home.HomeFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_group_to_navigation_map"
            app:destination="@id/navigation_map" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.androsov.groupjournal.ui.dashboard.DashboardFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_map_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.androsov.groupjournal.ui.notifications.NotificationsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_notifications" />
</navigation>